--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@nuxtjs/i18n": "^9.0.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.5",
+    "@prisma/nuxt": "^0.3.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "jose": "^5.9.6",
     "lucide-vue-next": "^0.447.0",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
+    "postgres": "^3.4.7",
     "radix-vue": "^1.9.6",
     "reka-ui": "^2.3.0",
     "shadcn-nuxt": "^2.2.0",
@@ -43,11 +47,13 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^22.7.5",
     "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.12.0",
     "postcss": "^8.5.4",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.6.3",
     "vue-tsc": "^2.2.10"
   },
